--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,9 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
     debian.binary/control.template
   * debian/rules: rename target build-kernel-stamp to module-source-stamp,
     reindent, simplify and unify; do not require root for building the tarball
+  * debian/rules: rename target configure-stamp to unpack-stamp and fix
+    dependencies
+  * debian/rules: remove unused stamp files, targets and variables
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
