--- a/debian/changelog
+++ b/debian/changelog
@@ -76,6 +76,7 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
   * debian/rules, debian/*.install.in: use dh_install instead of manual
     installation
   * debian/*.dirs: remove or minimize
+  * debian/rules: reindent and simplify
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
