--- a/debian/changelog
+++ b/debian/changelog
@@ -77,6 +77,7 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
     installation
   * debian/*.dirs: remove or minimize
   * debian/rules: reindent and simplify
+  * debian/rules: switch to dh with a few overrides
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
