--- a/debian/changelog
+++ b/debian/changelog
@@ -80,6 +80,7 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
   * debian/rules: switch to dh with a few overrides
   * debian.binary/patches/select-nv-kernel.o.ARCH.patch: add new patch instead
     of editing files with sed when creating the tarball
+  * update lintian overrides
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
