--- a/debian/changelog
+++ b/debian/changelog
@@ -81,6 +81,7 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
   * debian.binary/patches/select-nv-kernel.o.ARCH.patch: add new patch instead
     of editing files with sed when creating the tarball
   * update lintian overrides
+  * debian/rules: generate most parts of the AUTOGEN list automatically
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
