--- a/debian/changelog
+++ b/debian/changelog
@@ -90,6 +90,12 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
   * debian/module/debian/patches/conditionally-include-linux_version.h.patch:
     new patch, ensure linux/version.h is included only once (that header does
     not have include guards)
+  * debian/README*: remove reference to http://people.debian.org/~rdonald
+  * remove Randall Donald from Uploaders per his request
+  * debian/control:
+    - remove dependency on x11-common, probably remained from the X11R6 time
+    - reformat, syncronize, use more substvars
+    - add Conflicts with nvidia-glx-legacy-* packages
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
