Reorder packages for a better logical grouping
Patch from Andreas Beckmann.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@856 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -96,6 +96,7 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
     - remove dependency on x11-common, probably remained from the X11R6 time
     - reformat, syncronize, use more substvars
     - add Conflicts with nvidia-glx-legacy-* packages
+    - reorder packages for better logical grouping
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
