Install the custom bug script in every binary package
[ Andreas Beckmann ]
* install the bug-script in all packages as well as in the binary modules
  packages built from nvidia-kernel-source


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@857 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -97,6 +97,8 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
     - reformat, syncronize, use more substvars
     - add Conflicts with nvidia-glx-legacy-* packages
     - reorder packages for better logical grouping
+  * install the bug-script in all packages as well as in the binary modules
+    packages built from nvidia-kernel-source
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
