Replace debian/upstream_info with a makefile fragment
[ Andreas Beckmann ]
* replace shell script debian/upstream_info with makefile fragment
  debian/rules.defs


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@858 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -99,6 +99,8 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
     - reorder packages for better logical grouping
   * install the bug-script in all packages as well as in the binary modules
     packages built from nvidia-kernel-source
+  * replace shell script debian/upstream_info with makefile fragment
+    debian/rules.defs
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
