Add changelog entry for new upstream release
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@864 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,7 @@
-nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
+nvidia-graphics-drivers (195.36.24-1) UNRELEASED; urgency=low
+
+  [ Russ Allbery ]
+  * New upstream release.  (Closes: #571674, #575457, #575550, #578589)
 
   [ Andreas Beckmann ]
   * do not ship empty directory in module package
