--- a/debian/changelog
+++ b/debian/changelog
@@ -107,7 +107,8 @@ nvidia-graphics-drivers (195.36.24-1) UNRELEASED; urgency=low
   * debian/rules, debian/README.source: add new target get-orig-source and
     simplify instructions for tarball creation:
     uscan --report && dch -v <version> && debian/rules get-orig-source
-
+  * libcuda1.symbols: update for symbol changes in 195.xx
+  
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
 nvidia-graphics-drivers (190.53-4) unstable; urgency=high
