--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ nvidia-graphics-drivers (195.36.24-1) UNRELEASED; urgency=low
   * New upstream release.  (Closes: #571674, #575457, #575550, #578589)
   * Add an nvidia-kernel-dkms package which builds the kernel module using
     DKMS and hence automatically does the right thing with kernel upgrades
-    (provided the module builds).  (Closes: #334848, #528758)
+    (provided the module builds).  (Closes: #334848, #395226, #528758)
   * Overhaul the build system in nvidia-kernel-source to not require
     module-assistant, be more robust in its derivation of the kernel
     version, and embed the kernel package version in the module package
