Add the LEGACY variable and substvars for nvidia:Legacy
[ Andreas Beckmann ]
* debian/rules.defs, debian/rules: add variable/placeholder LEGACY
  and new subst vars nvidia:Legacy and nvidia:LegacyDesc

This is the first step towards sharing more build infrastructure with
the legacy packages.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@881 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -128,6 +128,8 @@ nvidia-graphics-drivers (195.36.24-1) UNRELEASED; urgency=low
     uscan --report && dch -v <version> && debian/rules get-orig-source
   * fix-2.6.33-build.patch: remove, fixed by upstream in 195.36.24
   * libcuda1.symbols: update for symbol changes in 195.xx
+  * debian/rules.defs, debian/rules: add variable/placeholder LEGACY
+    and new subst vars nvidia:Legacy and nvidia:LegacyDesc
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
