--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (195.36.24-2) unstable; urgency=low
+
+  [ Andreas Beckmann ]
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 20 May 2010 09:52:43 +0200
+
 nvidia-graphics-drivers (195.36.24-1) unstable; urgency=low
 
   [ Russ Allbery ]
