--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (195.36.24-2) UNRELEASED; urgency=low
   [ Andreas Beckmann ]
   * add upstream patch NVIDIA_kernel-195.36.24-682377.diff to fix support for
     more than one GPU with kernel 2.6.32 (closes: 566874)
+  * nvidia-glx: add Recommends: nvidia-vdpau-driver
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 20 May 2010 09:52:43 +0200
 
