--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (195.36.24-2) UNRELEASED; urgency=low
   * nvidia-kernel-{dkms,source}: temporarily add conflicts with binutild-gold
     from experimental, currently modules linked with gold cause kernel oops
     while loading (see: #581336)
+  * add bug-control script to collect more information about related packages
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 20 May 2010 09:52:43 +0200
 
