--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,9 @@ nvidia-graphics-drivers (195.36.24-2) UNRELEASED; urgency=low
     over from previous upgrades
   * run dh_install --list-missing
 
+  [ Jordi Pujol ]
+  * simplify installation by using debian/tmp as intermediate directory
+
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 20 May 2010 09:52:43 +0200
 
 nvidia-graphics-drivers (195.36.24-1) unstable; urgency=low
