automatically rename control files when building legacy packages
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@920 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ nvidia-graphics-drivers (195.36.24-2) UNRELEASED; urgency=low
     nvidia-libopencl1, nvidia-libopencl1-ia32, nvidia-libopencl1-dev
   * module source tarball generation: add legacy support
   * debian/nvidia-{glx,kernel}*.in: add #LEGACY# where appropriate
+  * debian/rules: automatically rename control files when building legacy
+    packages
 
   [ Jordi Pujol ]
   * simplify installation by using debian/tmp as intermediate directory
