--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,11 @@ nvidia-graphics-drivers (195.36.24-2) UNRELEASED; urgency=low
   [ Jordi Pujol ]
   * simplify installation by using debian/tmp as intermediate directory
 
+  [ Russ Allbery ]
+  * Improve the nvidia-kernel-dkms description to state that one must have
+    the kernel header package installed for DKMS modules to automatically
+    be built.  (Closes: #581963)
+
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 20 May 2010 09:52:43 +0200
 
 nvidia-graphics-drivers (195.36.24-1) unstable; urgency=low
