Tighten the debhelper dependency
* Tighten the dependency on debhelper since we rely on current debhelper
  behavior with handling architecture-specific packages.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@940 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
+
+  * Tighten the dependency on debhelper since we rely on current debhelper
+    behavior with handling architecture-specific packages.
+
+ -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
+
 nvidia-graphics-drivers (195.36.24-2) unstable; urgency=low
 
   [ Andreas Beckmann ]
