ship missing symlink /usr/lib/tls/libnvidia-tls.so.1
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@941 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
 
+  [ Russ Allbery ]
   * Tighten the dependency on debhelper since we rely on current debhelper
     behavior with handling architecture-specific packages.
+
+  [ Andreas Beckmann ]
+  * ship missing symlink /usr/lib/tls/libnvidia-tls.so.1
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
